rename page.css 6

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13599,7 +13599,7 @@ fieldset[disabled] .btn {
 .ml1 {
   margin-left: 8px!important
 }
-._1vk19cb,
+.payment-payout__notice-desc-text,
 .mt2 {
   margin-top: 16px!important
 }
