--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -60649,3 +60649,172 @@ label {
   margin-left: 0px !important;
   opacity: 0 !important;
 }
+._slm4k1 {
+  font-weight: 600 !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  text-align: right !important;
+}
+._15rpys7s {
+  font-size: inherit !important;
+  font-family: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  line-height: inherit !important;
+  appearance: none !important;
+  background: transparent !important;
+  border: 0px !important;
+  cursor: pointer !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  user-select: auto !important;
+  color: rgb(34, 34, 34) !important;
+  text-decoration: underline !important;
+  border-radius: 4px !important;
+  font-weight: 600 !important;
+  text-align: inherit !important;
+  outline: none !important;
+}
+@media (hover: hover) {
+  ._15rpys7s:hover {
+    cursor: pointer !important;
+    color: rgb(0, 0, 0) !important;
+    text-decoration: underline !important;
+  }
+}
+._1sikdxcl:visited {
+  color: #222222 !important;
+  text-decoration: underline !important;
+}
+._1sikdxcl {
+  font-size: inherit !important;
+  font-family: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  line-height: inherit !important;
+  color: #222222 !important;
+  text-decoration: underline !important;
+  border-radius: 4px !important;
+  font-weight: 600 !important;
+  text-align: inherit !important;
+  outline: none !important;
+}
+._yrzsibu {
+  width: 100% !important;
+  border: none !important;
+  outline: none !important;
+  padding: 0px !important;
+  margin: 26px 12px 6px !important;
+  min-height: 1px !important;
+  color: inherit !important;
+  background-color: transparent !important;
+  font-family: inherit !important;
+  font-size: inherit !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  appearance: none !important;
+}
+._13a5kt53 {
+  margin-bottom: 16px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif !important;
+  font-weight: 400 !important;
+  font-color: #222222 !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+}
+._1lftqm5 {
+  height: 116px !important;
+  margin-top: 24px !important;
+  margin-bottom: 16px !important;
+}
+._2lpeup5 {
+  background-color: rgb(255, 255, 255) !important;
+  border-width: 8px 1px 1px !important;
+  border-style: solid !important;
+  border-color: rgb(221, 221, 221) !important;
+  border-image: initial !important;
+  border-radius: 8px !important;
+  bottom: 16px !important;
+  box-shadow: rgb(0 0 0 / 20%) 0px 6px 20px !important;
+  display: flex !important;
+  left: 16px !important;
+  min-height: 100px !important;
+  padding: 12px 16px 20px !important;
+  right: 16px !important;
+  z-index: 2001 !important;
+  position: static !important;
+  margin: 16px 0px !important;
+}
+@media (min-width: 744px) {
+  ._2lpeup5 {
+    box-shadow: rgb(0 0 0 / 18%) 0px 2px 4px !important;
+    position: static !important;
+    margin: 16px 0px !important;
+  }
+}
+._15umbdc {
+  color: rgb(34, 34, 34) !important;
+  font-weight: 800 !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+}
+._lopxyt {
+  margin-top: 4px !important;
+  color: rgb(113, 113, 113) !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+}
+._13r0hxum {
+  -webkit-box-align: center !important;
+  margin-right: 16px !important;
+  display: flex !important;
+  align-items: center !important;
+}
+._s50zru {
+  border-bottom: 1px solid rgb(235, 235, 235) !important;
+}
+._1tx6hba {
+  margin-top: 64px !important;
+  padding-top: 40px !important;
+}
+._gw4xx4 {
+  color: rgb(34, 34, 34) !important;
+  cursor: inherit !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+}
+._pgfqnw {
+  font-weight: 600 !important;
+}
+._5kaapu {
+  -webkit-box-align: center !important;
+  display: flex !important;
+  align-items: center !important;
+}
+._1o3ag24 {
+  font-size: 12px !important;
+  line-height: 16px !important;
+  text-align: left !important;
+  color: rgb(113, 113, 113) !important;
+  padding-top: 8px !important;
+  padding-bottom: 16px !important;
+}
+._hi9sy {
+  color: rgb(113, 113, 113) !important;
+  margin-top: 4px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  word-break: break-word !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+}
+._gfomxi {
+  -webkit-box-pack: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: center !important;
+  flex: 1 1 auto !important;
+  width: 100% !important;
+}
