rename page.css 7

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1424,7 +1424,7 @@
     opacity: 1;
   }
 }
-@keyframes fade-in-c1frjvtt {
+@keyframes fade-in-place__nearby-card-rate-wrapper-anim {
   from {
     opacity: 0;
   }
@@ -2079,7 +2079,7 @@
     opacity: 1;
   }
 }
-@-webkit-keyframes fade-in-c1frjvtt {
+@-webkit-keyframes fade-in-place__nearby-card-rate-wrapper-anim {
   from {
     opacity: 0;
   }
