--- a/src/css/animations.css
+++ b/src/css/animations.css
@@ -893,7 +893,7 @@
     opacity: 1;
   }
 }
-@keyframes fade-in-c1frjvtt {
+@keyframes fade-in-place__nearby-card-rate-wrapper-anim {
   from {
     opacity: 0;
   }
@@ -1548,7 +1548,7 @@
     opacity: 1;
   }
 }
-@-webkit-keyframes fade-in-c1frjvtt {
+@-webkit-keyframes fade-in-place__nearby-card-rate-wrapper-anim {
   from {
     opacity: 0;
   }
