rename page.css 9

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1432,7 +1432,7 @@
     opacity: 1;
   }
 }
-@keyframes ease-f12s9h3r {
+@keyframes ease-open-full-map-anim {
   from {
     opacity: 0;
     -webkit-transform: scale(0.8);
@@ -2087,7 +2087,7 @@
     opacity: 1;
   }
 }
-@-webkit-keyframes ease-f12s9h3r {
+@-webkit-keyframes ease-open-full-map-anim {
   from {
     opacity: 0;
     -webkit-transform: scale(0.8);
