--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -18730,7 +18730,7 @@ h3:first-child {
   min-width: 0;
   position: relative;
 }
-.crbzydf[class][class] {
+.header__search-tabs-filter-flex[class][class] {
   -webkit-flex: 0.95 0 auto;
   -ms-flex: 0.95 0 auto;
   flex: 0.95 0 auto;
@@ -21400,7 +21400,7 @@ full__margin-bottom {
   min-width: 0;
   position: relative;
 }
-.crbzydf[class][class] {
+.header__search-tabs-filter-flex[class][class] {
   flex: var(--input-with-search-button_flex, 0.95 0 auto);
 }
 .header__search-tabs-filter-btn-container[class][class] {
@@ -21606,7 +21606,7 @@ full__margin-bottom {
   height: 100%;
   width: 100%;
 }
-.ioa2q3t[class][class] {
+.header__search-tabs-filter-body-where-region-overlay[class][class] {
   align-items: flex-end;
   display: flex;
   height: 100%;
@@ -21615,18 +21615,18 @@ full__margin-bottom {
   width: 100%;
 }
 
-.ckcbxhv[class][class] {
+.open-full-map[class][class] {
   display: flex;
   outline: 0;
   position: relative;
 }
-.c16iuq07[class][class] {
+.place__map-btn-overlay[class][class] {
   align-items: center;
   display: flex;
   justify-content: center;
   position: absolute;
 }
-.dir.f12s9h3r[class][class] {
+.dir.open-full-map-anim[class][class] {
   animation-duration: 250ms;
   animation-fill-mode: backwards;
   animation-name: ease;
@@ -21668,7 +21668,7 @@ full__margin-bottom {
   border-radius: 3px !important;
   overflow: hidden !important;
 }
-._17bbo57 {
+.place__recommended-dots-wrapper {
   position: absolute !important;
   bottom: 0 !important;
   left: 0 !important;
@@ -21679,26 +21679,26 @@ full__margin-bottom {
     rgba(0, 0, 0, 0.3) 100%
   ) !important;
 }
-._x30bkl {
+.place__recommended-dots-content {
   line-height: 0 !important;
   text-align: center !important;
   white-space: nowrap !important;
 }
-._111nj9tn {
+.place__recommended-dot-active {
   display: inline-block !important;
   vertical-align: middle !important;
   text-align: center !important;
   transform-origin: 50% 50% !important;
 }
 @supports (--custom: properties) {
-  ._111nj9tn::after {
+  .place__recommended-dot-active::after {
     background-color: var(
       --color-page-indicator-dots-background-selected-light,
       #fff
     ) !important;
   }
 }
-._111nj9tn::after {
+.place__recommended-dot-active::after {
   content: '' !important;
   display: inline-block !important;
   border: none !important;
@@ -21707,21 +21707,21 @@ full__margin-bottom {
   border-radius: 4px !important;
   background-color: #fff !important;
 }
-._1kau3dj1 {
+.place__recommended-dot-inactive {
   display: inline-block !important;
   vertical-align: middle !important;
   text-align: center !important;
   transform-origin: 50% 50% !important;
 }
 @supports (--custom: properties) {
-  ._1kau3dj1::after {
+  .place__recommended-dot-inactive::after {
     background-color: var(
       --color-page-indicator-dots-background-light,
       rgba(255, 255, 255, 0.8)
     ) !important;
   }
 }
-._1kau3dj1::after {
+.place__recommended-dot-inactive::after {
   content: '' !important;
   width: 6px !important;
   height: 6px !important;
@@ -21730,7 +21730,7 @@ full__margin-bottom {
   border: none !important;
   background-color: rgba(255, 255, 255, 0.8) !important;
 }
-._1r8d33l9 {
+.place__recommended-overlay {
   pointer-events: none !important;
   top: 0 !important;
   border: 0 !important;
@@ -21745,7 +21745,7 @@ full__margin-bottom {
   overflow: hidden !important;
 }
 @supports (--custom: properties) {
-  ._4fditnk {
+  .place__recommended-prev-btn {
     background: linear-gradient(
       to left,
       var(--color-carousel-navigation-gradient-inner, transparent) 0,
@@ -21753,7 +21753,7 @@ full__margin-bottom {
     ) !important;
   }
 }
-._4fditnk {
+.place__recommended-prev-btn {
   cursor: pointer !important;
   border: 0 !important;
   padding: 0 !important;
@@ -21770,18 +21770,18 @@ full__margin-bottom {
   width: 5% !important;
 }
 @supports (--custom: properties) {
-  ._n0qiwy {
+  .place__recommended-prev-spacer {
     left: var(--spacing-carousel-navigation-horizontal, 16px) !important;
   }
 }
-._n0qiwy {
+.place__recommended-prev-spacer {
   position: absolute !important;
   left: 16px !important;
   top: 50% !important;
   transform: translateY(-50%) !important;
 }
 @supports (--custom: properties) {
-  ._1imd680n {
+  .place__recommended-next-btn {
     background: linear-gradient(
       to right,
       var(--color-carousel-navigation-gradient-inner, transparent) 0,
@@ -21789,7 +21789,7 @@ full__margin-bottom {
     ) !important;
   }
 }
-._1imd680n {
+.place__recommended-next-btn {
   cursor: pointer !important;
   border: 0 !important;
   padding: 0 !important;
@@ -21806,11 +21806,11 @@ full__margin-bottom {
   width: 5% !important;
 }
 @supports (--custom: properties) {
-  ._grtzc2 {
+  .place__recommended-next-spacer {
     right: var(--spacing-carousel-navigation-horizontal, 16px) !important;
   }
 }
-._grtzc2 {
+.place__recommended-next-spacer {
   position: absolute !important;
   right: 16px !important;
   top: 50% !important;
@@ -26614,7 +26614,7 @@ html :where(img[class*='wp-image-']) {
   height: 100%;
   width: 100%;
 }
-.ioa2q3t[class][class] {
+.header__search-tabs-filter-body-where-region-overlay[class][class] {
   -webkit-align-items: flex-end;
   -webkit-box-align: flex-end;
   -ms-flex-align: flex-end;
@@ -26733,7 +26733,7 @@ html :where(img[class*='wp-image-']) {
   min-width: 0;
   position: relative;
 }
-.crbzydf[class][class] {
+.header__search-tabs-filter-flex[class][class] {
   -webkit-flex: var(--input-with-search-button_flex, 0.95 0 auto);
   -ms-flex: var(--input-with-search-button_flex, 0.95 0 auto);
   flex: var(--input-with-search-button_flex, 0.95 0 auto);
@@ -34941,7 +34941,7 @@ tr.show-desktop {
   margin-left: 4px !important;
   margin-right: -6px !important;
 }
-.c1gqqhxk[class][class] {
+.place__map-btn-icon[class][class] {
   -webkit-align-items: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -34960,7 +34960,7 @@ tr.show-desktop {
     -webkit-transform 0.1s var(--bd-d-m-c-q);
   width: 100%;
 }
-.dir.c1gqqhxk[class][class] {
+.dir.place__map-btn-icon[class][class] {
   -webkit-transform: scaleX(1);
   -ms-transform: scaleX(1);
   transform: scaleX(1);
@@ -40202,7 +40202,7 @@ tr.show-desktop {
   margin: var(--margin-top, 0) var(--margin-left, 0) var(--margin-bottom, 0)
     var(--margin-right, 0);
 }
-.c1gqqhxk[class][class] {
+.place__map-btn-icon[class][class] {
   align-items: center;
   display: flex;
   height: 100%;
@@ -40210,11 +40210,11 @@ tr.show-desktop {
   opacity: 1;
   width: 100%;
 }
-.dir.c1gqqhxk[class][class] {
+.dir.place__map-btn-icon[class][class] {
   transform: scaleX(1);
   transition: opacity 0.1s linear, transform 0.1s var(--bd-d-m-c-q);
 }
-.ckcbxhv[class][class] {
+.open-full-map[class][class] {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -40225,7 +40225,7 @@ tr.show-desktop {
 .cy9zvlx[class][class] {
   position: relative;
 }
-.c16iuq07[class][class] {
+.place__map-btn-overlay[class][class] {
   -webkit-align-items: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -40240,10 +40240,10 @@ tr.show-desktop {
   justify-content: center;
   position: absolute;
 }
-.dir.c16iuq07[class][class] {
+.dir.place__map-btn-overlay[class][class] {
   border-radius: 50%;
 }
-.dir.f12s9h3r[class][class] {
+.dir.open-full-map-anim[class][class] {
   -webkit-animation-duration: 250ms;
   animation-duration: 250ms;
   -webkit-animation-fill-mode: backwards;
