--- a/src/css/animations.css
+++ b/src/css/animations.css
@@ -901,7 +901,7 @@
     opacity: 1;
   }
 }
-@keyframes ease-f12s9h3r {
+@keyframes ease-open-full-map-anim {
   from {
     opacity: 0;
     -webkit-transform: scale(0.8);
@@ -1556,7 +1556,7 @@
     opacity: 1;
   }
 }
-@-webkit-keyframes ease-f12s9h3r {
+@-webkit-keyframes ease-open-full-map-anim {
   from {
     opacity: 0;
     -webkit-transform: scale(0.8);
